Changed service_autocomplete behavior to use document body container instead component wrapper. This allow a real absolute position and prevents issues like Bibliography portals inside portals overflow

--- a/core/services/service_autocomplete/css/service_autocomplete.less
+++ b/core/services/service_autocomplete/css/service_autocomplete.less
@@ -15,13 +15,13 @@
 		// box-shadow: -1px 1px 0 @color_orange_dedalo, inset -1px 1px 0 @color_orange_dedalo; // orange
 		box-shadow: 0px 1px 0 1px @color_orange_dedalo, inset -1px 1px 0 @color_orange_dedalo;
 		color: #444444;
-		left: 0px;
-		margin-left: 0px;
 		position: absolute;
-		top: 100%;
-		width: 100%;
+		// left: 0px;
+		// margin-left: 0px;
+		// top: 100%;
+		// width: 100%;
 		min-width: 12rem;
-		z-index: 1;
+		z-index: 3;
 
 		// hide wrapper_service_autocomplete when parent element .component_portal is not .active
 		// .wrapper_component:not(.active) & {
